updating svg icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Eo_circle_orange_letter-e.svg/512px-Eo_circle_orange_letter-e.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vial Health Subject Data</title>
   </head>
